crates/analyzer/tests/snapshots/errors__invalid_generic_bound.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: expected trait, found type `bool`
  ┌─ compile_errors/invalid_generic_bound.fe:2:19
  │
2 │     pub fn bar<T: bool>(val: T) {}
  │                   ^^^^ not a trait


